# pdomain-prep-for-pgdp

./: .claudeignore  .gitignore  .gitlint  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .venv  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  install.ps1  install.sh  openapi.json  process-book-belloc-the-four-men.ipynb  pyproject.toml
.basedpyright/: baseline.json
.github/ISSUE_TEMPLATE/: decision.md
.github/workflows/: ci.yml  dep-refresh.yml  release.yml
build_hooks/: spa_check.py
docs/: 02-backend.md  03-pipeline.md  06-deployment.md  08-roadmap-shipped.md  08-roadmap.md  README.md  dev-local-upgrade-flow.md
docs/architecture/: 01-overview.md  02-backend.md  03-pipeline.md  06-deployment.md  07-testing.md  statechart-convergence-notes.md
docs/archive/architecture/: legacy-docs-readme.md
docs/archive/plans/: 2026-05-16-backend-quality-hardening.md  roadmap-shipped.md
docs/archive/research/: code-quality-audit-2026-05-16.md
docs/archive/specs/: 2026-05-11-pipeline-task-model-design.md  2026-05-11-project-fanout-awaiting-review-design.md  2026-05-11-search-across-pages-design.md  2026-05-13-konva-rotate-design.md  2026-05-13-m4-migration-disk-cost-design.md  2026-05-13-word-delete-undo-design.md  2026-05-15-hifi-redesign-plan-session-prompt.md  2026-05-16-ui-design-documentation-for-claude-design-plan.md
docs/audit/: code-quality-audit-2026-05-16.md
docs/conventions/: lint-deviations.md
docs/decisions/: 2026-05-23-apikey-server-side-proxy.md  architecture-decisions.md
docs/design-brief/: design-system.md  index.md
docs/design-brief/workflows/: WF-01-folder-upload.md  WF-02-package-validation.md  WF-03-source-quality.md  WF-09-page-reorder.md  WF-10-batch-crop-review.md
docs/futures/: managed-adapter-pgdp.md
docs/plans/: 2026-05-16-backend-quality-hardening.md  2026-06-10-statechart-convergence.md  2026-06-11-gpu-memory-pipeline.md  2026-06-11-seam-remediation.md  2026-06-12-residue-cleanup-prompt.md  2026-06-15-grayscale-pipeline-implementation.md  2026-06-17-page-numbering-runs-model.md  hifi-deferred-items-fixes.md  hifi-loader-source-grayscale-complete.md  pd-ui-design-handoff-implementation.md  roadmap.md
docs/plans/design_handoff_pgdp_app/: COMPONENT_INDEX.md  PROMPT.md  README.md  statechart-authoring-guide.md
docs/process/: lint-deviations.md  writing-style.md
docs/research/: 2026-05-22-deep-code-review-security-scan.md  findings-scannos.md
docs/runbooks/: dev-local-upgrade-flow.md
docs/specs/: 2026-05-11-project-fanout-awaiting-review-design.md  2026-05-11-search-across-pages-design.md  2026-05-11-workbench-artifact-viewer-design.md  2026-05-13-konva-rotate-design.md  2026-05-13-word-delete-undo-design.md  2026-05-15-hifi-redesign-plan.md  2026-05-24-issue-123-spa-fallback-path-traversal.md  2026-05-24-issue-124-cdn-auth-bypass.md  2026-05-24-issue-126-job-retry-payload-override.md  2026-05-24-issue-127-ingest-arbitrary-source-key.md  2026-05-24-issue-128-packaging-filename-escape.md  2026-05-24-issue-129-resource-bounds.md  2026-05-24-issue-130-text-review-lost-edits.md  2026-05-24-pd-ui-design-handoff-implementation.md  2026-06-10-statechart-convergence-design.md  2026-06-15-grayscale-pipeline.md  2026-06-15-page-numbering-runs-model.md  api-v2-deltas.md  design-brief-index.md  design-system.md  futures-managed-adapter-pgdp.md  library-placement.md  machine-stage-map.md  pipeline-task-model.md  stage-registry-v2.md
docs/specs/workflows/: WF-11-gegl-grayscale.md
frontend/: .npmrc  .prettierignore  eslint.config.js  knip.json  node_modules  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  pdUiPin.test.ts
frontend/src/api/: client.ts  (+5 more)
scripts/: ai-filter-log.py  ai_filter_log.py  capture-screenshots.py  capture_screenshots.py  check_statecharts.py  ci-against-main.sh  detect_dev_local.py  do-release.sh  export_openapi.py  git_main_sources.py  local-check.sh  local-dev.sh  local-frontend-install.sh  local-install.sh  local-run.sh  local-setup-py.sh  local-setup.sh  local-uninstall.sh  local-upgrade-deps.sh  release-common.sh  update-pd-deps.sh  update-pdomain-deps.sh  update_github_actions.py
specs/: 00-overview.md  01-book-config.md  02-pipeline-steps.md  03-ui-layout.md  04-gpu-acceleration.md  05-illustrations.md  06-page-workbench.md  07-api-design.md  08-data-models.md  09-deployment.md  REFACTOR-PROPOSAL.md
src/pd_prep_for_pgdp/: __main__.py  bootstrap.py  settings.py
src/pdomain_prep_for_pgdp/: __init__.py  __main__.py  bootstrap.py  pdomain-suite.json  settings.py
tests/: conftest.py  test_3tier_stage_settings.py  test_api_page_payload.py  test_apikey_auth.py  test_apikey_proxy_session.py  test_assets_routes.py  test_assign_prefixes.py  test_async_run_stage_route.py  test_auth_me.py  test_auto_detect.py  test_auto_detect_edge.py  test_awaiting_review.py  test_b3_ocr_text_stages.py  test_b4_tail_stages.py  test_b5_page_stage_409.py  test_b5_page_stage_v2_rekey.py  test_b5_pipeline_hydration.py  test_b5_project_sse.py  test_b5_project_stages.py  test_b5_stage_settings_routes.py  test_b5_wordcheck_hyphen_join_routes.py  test_batch_jobs.py  test_blank_proof.py  test_bootstrap_builders.py  test_bootstrap_frontend_dev_mode.py  test_cancelled_job_protected.py  test_cdn.py  test_cdn_upload.py  test_cdn_upload_edge.py  test_composed_stage_execution.py  test_concurrent_jobs.py  test_config_resolver.py  test_cover_title_packaging.py  test_crop_for_ocr.py  test_crop_for_ocr_edge.py  test_delete_page_words.py  test_delete_project.py  test_dependencies.py  test_detect_dev_local.py  test_disk_cost_banner.py  (+180 more)
tests/e2e/: conftest.py  test_apikey_proxy_e2e.py  test_configure_banner.py  test_convergence_app_loads.py  test_convergence_pipeline_walk.py  test_environment_sanity.py  test_grayscale_browser.py  test_page_list_browser.py  test_page_order_runs_browser.py  test_upload_flow.py  test_w62_gap_tests.py
tests/fixtures/: seed_pages.py  three_page_book.py
(+600 files in other folders)
