[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pd-prep-for-pgdp"
dynamic = ["version"]
description = "Web app that converts scanned book images into a PGDP-ready submission package"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "pd-book-tools",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "huggingface_hub>=0.23",
    "transformers>=4.45",
    "sse-starlette>=2.1",
    "anyio>=4.4",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda12x>=13.3",
    "nvidia-nvimgcodec-cu12>=0.3",
]
s3 = [
    "boto3>=1.35",
]
postgres = [
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]
modal = [
    "modal>=0.66",
]
jwt = [
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
pgdp-prep = "pd_prep_for_pgdp.__main__:main"

[project.urls]
Homepage = "https://github.com/ConcaveTrillion/pd-prep-for-pgdp"
Repository = "https://github.com/ConcaveTrillion/pd-prep-for-pgdp"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.28",
]
e2e = [
    "pytest-playwright>=0.5",
]

[tool.uv.sources]
pd-book-tools = { git = "https://github.com/ConcaveTrillion/pd-book-tools.git", tag = "v0.9.0" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_prep_for_pgdp"]

[tool.hatch.build.targets.wheel.force-include]
"src/pd_prep_for_pgdp/static" = "pd_prep_for_pgdp/static"

# Local guard mirroring the CI check in `.github/workflows/release.yml`:
# fail `uv build` / `hatch build` if the SPA bundle is missing, so the
# wheel can never be published with a blank `static/`. See
# `build_hooks/spa_check.py` for the rationale and roadmap §22 for the
# CI-side counterpart.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks/spa_check.py"

[tool.ruff]
line-length = 110
target-version = "py313"
extend-exclude = [
    # Historical Jupyter notebook the app is replacing — kept in-tree as
    # a reference artefact, not source code.
    "process-book-belloc-the-four-men.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "SIM", "UP", "RUF", "ERA", "T20"]
ignore = [
    # FastAPI's canonical pattern for dependency injection puts Depends()
    # in default arguments. Ignoring this rule across the whole repo.
    "B008",
    # `Foo(str, Enum)` — spec-08 + Pydantic patterns use this idiom widely;
    # `StrEnum` is the newer alternative but doesn't change semantics.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
# Spec-aligned coordinate names (L/R/T/B, minX/maxX/minY/maxY) trigger E741 in tests
# and N806 wherever they appear as local variables — the uppercase form is intentional.
"tests/*" = ["E741", "N806"]
# `core/illustrations.py` and `core/pipeline/*` use the same coord names.
"src/pd_prep_for_pgdp/core/illustrations.py" = ["E741", "N806"]
"src/pd_prep_for_pgdp/core/pipeline/*.py" = ["E741", "N806"]
"src/pd_prep_for_pgdp/core/models.py" = ["E741"]
"src/pd_prep_for_pgdp/api/data/pages.py" = ["E741"]
# `core/ocr.py` uses L/R/T/B locals to adapt arbitrary bbox shapes from pd-book-tools.
"src/pd_prep_for_pgdp/core/ocr.py" = ["N806"]
# Mock class mimics boto3's uppercase keyword argument names (Params, ExpiresIn).
"tests/test_s3_storage.py" = ["N803", "N805"]
# Lazy imports inside functions (cycle-breaking + optional-dep patterns).
"src/pd_prep_for_pgdp/api/gpu/jobs.py" = ["E402"]
"src/pd_prep_for_pgdp/core/job_runner.py" = ["E402"]

[tool.pyright]
include = ["src", "tests", "scripts"]
typeCheckingMode = "basic"

[[tool.pyright.executionEnvironments]]
root = "src"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
