[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pdomain-prep-for-pgdp"
dynamic = ["version"]
description = "Web app that converts scanned book images into a PGDP-ready submission package"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "pdomain-book-tools>=0.14.1",
    "pdomain-ocr-ops>=0.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "huggingface_hub>=0.23",
    "transformers>=4.45",
    "sse-starlette>=2.1",
    "starlette>=1.0.1",
    "anyio>=4.4",
    "pyoxipng>=9.1.1",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda12x>=13.3",
    "nvidia-nvimgcodec-cu12>=0.3",
]
s3 = [
    "boto3>=1.35",
]
postgres = [
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]
modal = [
    "modal>=0.66",
]
jwt = [
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
pgdp-prep = "pdomain_prep_for_pgdp.__main__:main"

[project.urls]
Homepage = "https://github.com/pdomain/pdomain-prep-for-pgdp"
Repository = "https://github.com/pdomain/pdomain-prep-for-pgdp"

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.0",
    "psutil>=6.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.6",
    "ruff>=0.15.13",
    "httpx>=0.28",
]
e2e = [
    "pytest-playwright>=0.5",
]

[[tool.uv.index]]
name = "pdomain-index-pip"
url = "https://pdomain.github.io/pdomain-index-pip/simple/"
explicit = true

[tool.uv.sources]
pdomain-book-tools = { path = "../pd-book-tools", editable = true }
pdomain-ocr-ops = { path = "../pd-ocr-ops", editable = true }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pdomain_prep_for_pgdp"]

[tool.hatch.build.targets.wheel.force-include]
"src/pdomain_prep_for_pgdp/static" = "pdomain_prep_for_pgdp/static"

# Local guard mirroring the CI check in `.github/workflows/release.yml`:
# fail `uv build` / `hatch build` if the SPA bundle is missing, so the
# wheel can never be published with a blank `static/`. See
# `build_hooks/spa_check.py` for the rationale and roadmap §22 for the
# CI-side counterpart.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks/spa_check.py"

[tool.ruff]
line-length = 110
target-version = "py313"
extend-exclude = [
    # Historical Jupyter notebook the app is replacing — kept in-tree as
    # a reference artefact, not source code.
    "process-book-belloc-the-four-men.ipynb",
]

[tool.ruff.lint]
select = [
    # Current baseline
    "E", "W",       # pycodestyle errors/warnings
    "F",            # pyflakes
    "I",            # isort (replaces standalone isort)
    "N",            # pep8-naming
    "B",            # flake8-bugbear — mutable defaults, broad excepts, etc.
    "SIM",          # flake8-simplify
    "UP",           # pyupgrade
    "RUF",          # ruff-specific rules
    "ERA",          # eradicate — commented-out code
    "T20",          # flake8-print
    # Added per 2026-05-17 strict-linting decisions
    "ANN",          # flake8-annotations — force type hints on all sigs
    "S",            # flake8-bandit — security rules
    "C4",           # flake8-comprehensions
    "PERF",         # perflint — performance anti-patterns
    "TC",           # flake8-type-checking — move type-only imports to TYPE_CHECKING
    "TID",          # flake8-tidy-imports
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "PL",           # pylint subset (PLC + PLE + PLR + PLW)
    "D",            # pydocstyle
    # Added per 2026-05-17 guidelines audit (BLE/TRY/LOG/G)
    "BLE",          # flake8-blind-except
    "TRY",          # tryceratops — TRY400 enforces log.exception over log.error in except
    "LOG",          # flake8-logging — proper log.* usage
    "G",            # flake8-logging-format — lazy formatting in log calls
]
ignore = [
    # FastAPI's canonical pattern for dependency injection puts Depends()
    # in default arguments. Ignoring this rule across the whole repo.
    "B008",
    # `Foo(str, Enum)` — spec-08 + Pydantic patterns use this idiom widely;
    # `StrEnum` is the newer alternative but doesn't change semantics.
    "UP042",
    # Line length: many long docstrings, error messages, and URLs; enforcing
    # 88-char wrapping everywhere adds noise without improving readability.
    "E501",
    # Docstring style: D203 (1-blank-before-class-docstring) conflicts with
    # D211 (no-blank-before-class-docstring); D212 (multi-line-summary-first-line)
    # conflicts with D213 (multi-line-summary-second-line). Pick one of each pair.
    "D203",
    "D212",
    # Missing docstrings on public modules/packages/magic-methods: large
    # existing codebase; add incrementally, not in a single lint sweep.
    "D100",
    "D104",
    "D107",
    # PLR0913 (too-many-arguments): FastAPI/pipeline functions legitimately need
    # many params; enforcing here would require invasive config-object refactors.
    "PLR0913",
    # PLR2004 (magic-value-comparison): common in OCR geometry/threshold code.
    "PLR2004",
    # TRY003 (long-message-outside-exception-class): too noisy for a service
    # that uses f-string error messages everywhere.
    "TRY003",
    # COM812 (missing-trailing-comma): conflicts with ruff formatter auto-style.
    "COM812",
    # PLC0415 (import-not-at-top-level): deferred imports are a legitimate
    # pattern here — used to break circular deps and to avoid loading
    # optional-heavy modules (cv2, torch, cupy) until needed.
    "PLC0415",
    # PLR complexity rules: pipeline functions legitimately have high
    # branch/return counts.
    "PLR0912",  # too-many-branches
    "PLR0911",  # too-many-return-statements
    "PLR0915",  # too-many-statements
    # ANN401 (dynamically-typed-expressions): some functions legitimately
    # accept/return Any (e.g. JSON deserialisers, generic dispatch helpers).
    "ANN401",
    # D205 (1-blank-line-required-between-summary-and-description): too noisy.
    "D205",
    # D105 (missing-docstring-in-magic-method): __repr__, __eq__, etc. are
    # self-documenting; require incrementally on new code only.
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Spec-aligned coordinate names (L/R/T/B, minX/maxX/minY/maxY) trigger E741 in tests
# and N806 wherever they appear as local variables — the uppercase form is intentional.
# Tests: assert is the idiom (S101/S104); magic numbers common (PLR2004); no
# annotations required (ANN); no docstrings required (D); security rules
# relaxed; pytest.raises match= not required (PT011); /tmp paths fine (S108);
# loop-var reassignment (PLW2901); list-building in tests fine (PERF401/PERF402);
# PT018 multi-condition asserts common in parametrized tests; S301 pickle in fixtures;
# S603 subprocess in test helpers; TRY rules in test conftest; BLE001 in e2e.
"tests/*" = ["E741", "N806", "S101", "S104", "S105", "S106", "S301", "S311", "S603", "T201", "ANN", "D", "PLR2004", "PT011", "PT018", "S108", "PLR0133", "PLW2901", "PLW1510", "PERF401", "PERF402", "TRY", "BLE001"]
# Mock class mimics boto3's uppercase keyword argument names (Params, ExpiresIn).
"tests/test_s3_storage.py" = ["N803", "N805"]
# Scripts: print() is the output mechanism; no docstrings required; S603/S607/ANN
# are fine for developer-only helper scripts.
"scripts/*.py" = ["T201", "D", "ANN", "S603", "S607", "PLW1510"]
# __init__.py: re-exports without docstrings; F401 used for public API surface.
"**/__init__.py" = ["D104", "F401", "TC"]
# Private modules: internal convention, no docstrings required.
"**/_*.py" = ["D"]
# `core/illustrations.py` uses coord names (E741/N806) and has annotation/docstring debt.
# PLW0603 global lazy-cache pattern — intentional memoisation, not a state mutation.
"src/pdomain_prep_for_pgdp/core/illustrations.py" = ["E741", "N806", "ANN", "D", "G003", "G004", "BLE001", "TRY", "PLW0603"]
# `core/pipeline/*` use coord names (E741/N806) and have annotation/docstring debt.
# S101 asserts used as guard preconditions inside the runner (not test asserts).
"src/pdomain_prep_for_pgdp/core/pipeline/*.py" = ["E741", "N806", "ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "S101"]
# TC is suppressed globally on Pydantic-model-defining files because ruff's
# TC auto-fix moves runtime imports into TYPE_CHECKING, which breaks Pydantic
# model validation when from __future__ import annotations is active (Pydantic
# needs the actual class, not a forward reference string). Add TC back
# incrementally to files that use model_rebuild() or have no Pydantic models.
"src/pdomain_prep_for_pgdp/core/models.py" = ["E741", "ANN", "D", "TC"]
"src/pdomain_prep_for_pgdp/api/data/pages.py" = ["E741", "ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
# `core/ocr.py` uses L/R/T/B locals to adapt arbitrary bbox shapes from pdomain-book-tools.
"src/pdomain_prep_for_pgdp/core/ocr.py" = ["N806", "ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
# Lazy imports inside functions (cycle-breaking + optional-dep patterns).
"src/pdomain_prep_for_pgdp/api/gpu/jobs.py" = ["E402", "ANN", "D", "TC"]
"src/pdomain_prep_for_pgdp/core/job_runner.py" = ["E402", "ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "TC"]
# Core modules with annotation/docstring debt: add individually as each gets a focused pass.
"src/pdomain_prep_for_pgdp/core/ingest.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "S101", "TC"]
"src/pdomain_prep_for_pgdp/core/auto_detect.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
"src/pdomain_prep_for_pgdp/bootstrap.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
"src/pdomain_prep_for_pgdp/adapters/**/*.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
# sqlite.py: S101 assert used as precondition guard (not test); S608 SQL is
# parameterised with an enum value (not user input — initial_status comes from
# PageStageStatus literal, never from a request body).
"src/pdomain_prep_for_pgdp/adapters/database/sqlite.py" = ["S101", "S608"]
"src/pdomain_prep_for_pgdp/api/**/*.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
"src/pdomain_prep_for_pgdp/core/config_resolver.py" = ["ANN", "D", "TC"]
"src/pdomain_prep_for_pgdp/core/text_postprocess.py" = ["ANN", "D", "G003", "G004", "TC"]
# Dispatcher: small protocol-like classes with no docstrings yet.
"src/pdomain_prep_for_pgdp/dispatcher/*.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "PERF401", "TC"]
# Core event/queue/logging modules with docstring debt.
"src/pdomain_prep_for_pgdp/core/job_events.py" = ["ANN", "D", "TC"]
"src/pdomain_prep_for_pgdp/core/logging_config.py" = ["ANN", "D", "TC"]
"src/pdomain_prep_for_pgdp/core/packaging.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
"src/pdomain_prep_for_pgdp/core/queue/single_executor.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]
"src/pdomain_prep_for_pgdp/core/stage_events.py" = ["ANN", "D", "TC"]
"src/pdomain_prep_for_pgdp/settings.py" = ["ANN", "D", "TC"]
# CLI subcommands use docstrings as help text, not Google-style; ANN backlog.
"src/pdomain_prep_for_pgdp/cli/*.py" = ["ANN", "D", "G003", "G004", "BLE001", "TRY", "TC"]

[tool.basedpyright]
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]

# "recommended" is the workspace-canonical strict mode per 2026-05-17 decisions.
# Catches unannotated functions, inferred-Any propagation, untyped decorators,
# and missing return types that "standard" mode skips.
typeCheckingMode = "recommended"
# Warnings are baselined in .basedpyright/baseline.json — new code must be clean.
# The baseline captures 1323 warnings from recommended mode (unknown types from
# cv2/numpy/DocTR stubs, explicit Any, unannotated class attributes, etc.).
failOnWarnings = true

# Import cycles are structural (FastAPI dependencies, bootstrap↔adapters, etc.)
# and resolved via TYPE_CHECKING guards. Suppress the per-file error here;
# actual import order issues would surface as runtime ImportErrors.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"

[tool.pytest.ini_options]
addopts = [
    "-ra",                       # show short summary of all non-pass outcomes
    "--strict-markers",          # fail on unknown markers
    "--strict-config",           # fail on unknown pytest config keys
    "--cov=pdomain_prep_for_pgdp",
    "--cov-branch",              # measure branch coverage (gates except-path testing)
    "--cov-report=term-missing:skip-covered",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    # Treat all warnings as errors — surfaces deprecation issues at LLM-iteration time.
    "error",
    # Pre-existing ignores: third-party noise that isn't actionable here.
    # Add new ignores below as new warnings surface — each one with a comment
    # explaining the package and why we tolerate it.
    #
    # coverage/pytest-cov: the coverage collector leaves sqlite3 connections open
    # when GC runs during test teardown. This is a coverage library bug (not our
    # code), surfaced as PytestUnraisableExceptionWarning wrapping ResourceWarning.
    # The ResourceWarning originates from coverage.collector and coverage.bytecode.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning:coverage.*",
]
